# nanobyte

./: .gitignore  Cargo.toml  README.md  TIMELINE_OF_INVENTION.md
crates/nanobyte-core/: Cargo.toml
crates/nanobyte-core/src/: lib.rs
crates/nanobyte-ground/: Cargo.toml
crates/nanobyte-ground/src/: main.rs
crates/nanobyte-hive/: Cargo.toml
crates/nanobyte-hive/src/: main.rs
crates/nanobyte-intel/: Cargo.toml
crates/nanobyte-intel/src/: main.rs
crates/nanobyte-mote/: Cargo.toml
crates/nanobyte-mote/src/: lib.rs
crates/nanobyte-proto/: Cargo.toml
crates/nanobyte-proto/src/: lib.rs
crates/nanobyte-sim/: Cargo.toml
crates/nanobyte-sim/src/: main.rs
crates/nanobyte-test/: Cargo.toml
crates/nanobyte-test/src/: main.rs
firmware/: memory.x
firmware/esp32-wroom-bme280/: esp32-wroom-bme280.ino
