# Unlicense — NANOBYTE test binary
# P16: CI = Test Binary. Single staged binary. Stages: compile → unit →
# protocol fuzz → sim integration → HIL loop. Block 0.0 ships stage 1 (the
# fact that this binary compiles and runs means the workspace compiles).

[package]
name = "nanobyte-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Single staged test binary for NANOBYTE — P16 CI=Test Binary."

[[bin]]
name = "nanobyte-test"
path = "src/main.rs"

[dependencies]
nanobyte-core = { path = "../nanobyte-core" }
nanobyte-proto = { path = "../nanobyte-proto" }
nanobyte-mote = { path = "../nanobyte-mote" }
anyhow = { workspace = true }
